// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Wheel Wheel disabled 1`] = `
<Wheel
  dataSource={
    Array [
      Object {
        "label": "选项一",
        "value": "1",
      },
      Object {
        "label": "选项二",
        "value": "2",
      },
    ]
  }
  disabled={true}
  itemRender={[Function]}
  prefixCls="mcore-wheel"
  valueMember="value"
>
  <div
    className="mcore-wheel"
  >
    <div
      className="mcore-wheel__content"
    >
      <div
        className="mcore-wheel__item mcore-wheel__item--selected mcore-wheel__item--disabled"
        key="0"
      >
        选项一
      </div>
      <div
        className="mcore-wheel__item mcore-wheel__item--disabled"
        key="1"
      >
        选项二
      </div>
    </div>
  </div>
</Wheel>
`;

exports[`Wheel Wheel render defaultValue 1`] = `
<Wheel
  dataSource={
    Array [
      Object {
        "label": "选项一",
        "value": "1",
      },
      Object {
        "label": "选项二",
        "value": "2",
      },
    ]
  }
  defaultValue="1"
  itemRender={[Function]}
  prefixCls="mcore-wheel"
  valueMember="value"
>
  <div
    className="mcore-wheel"
  >
    <div
      className="mcore-wheel__content"
    >
      <div
        className="mcore-wheel__item mcore-wheel__item--selected"
        key="0"
      >
        选项一
      </div>
      <div
        className="mcore-wheel__item"
        key="1"
      >
        选项二
      </div>
    </div>
  </div>
</Wheel>
`;

exports[`Wheel Wheel render visible 1`] = `
<Wheel
  dataSource={
    Array [
      Object {
        "label": "选项一",
        "value": "1",
      },
      Object {
        "label": "选项二",
        "value": "2",
      },
    ]
  }
  itemRender={[Function]}
  prefixCls="mcore-wheel"
  valueMember="value"
>
  <div
    className="mcore-wheel"
  >
    <div
      className="mcore-wheel__content"
    >
      <div
        className="mcore-wheel__item mcore-wheel__item--selected"
        key="0"
      >
        选项一
      </div>
      <div
        className="mcore-wheel__item"
        key="1"
      >
        选项二
      </div>
    </div>
  </div>
</Wheel>
`;

exports[`Wheel Wheel set props disabled 1`] = `
<Wheel
  dataSource={
    Array [
      Object {
        "label": "选项一",
        "value": "1",
      },
      Object {
        "label": "选项二",
        "value": "2",
      },
    ]
  }
  defaultValue="1"
  itemRender={[Function]}
  prefixCls="mcore-wheel"
  value="1"
  valueMember="value"
>
  <div
    className="mcore-wheel"
  >
    <div
      className="mcore-wheel__content"
    >
      <div
        className="mcore-wheel__item mcore-wheel__item--selected"
        key="0"
      >
        选项一
      </div>
      <div
        className="mcore-wheel__item"
        key="1"
      >
        选项二
      </div>
    </div>
  </div>
</Wheel>
`;

exports[`Wheel Wheel set props value 1`] = `
<Wheel
  dataSource={
    Array [
      Object {
        "label": "选项一",
        "value": "1",
      },
      Object {
        "label": "选项二",
        "value": "2",
      },
    ]
  }
  defaultValue="1"
  itemRender={[Function]}
  prefixCls="mcore-wheel"
  value="1"
  valueMember="value"
>
  <div
    className="mcore-wheel"
  >
    <div
      className="mcore-wheel__content"
    >
      <div
        className="mcore-wheel__item mcore-wheel__item--selected"
        key="0"
      >
        选项一
      </div>
      <div
        className="mcore-wheel__item"
        key="1"
      >
        选项二
      </div>
    </div>
  </div>
</Wheel>
`;
